<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginVertical="16dp"
    app:cardCornerRadius="30dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/ordersItemRestaurantNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/ordersImageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Ali Usta'nın Yeri" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ordersItemDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/ordersItemRestaurantNameTextView"
            app:layout_constraintTop_toBottomOf="@id/ordersItemRestaurantNameTextView"
            tools:text="24.07.2021 -15:07" />

        <View
            android:id="@+id/view"
            android:layout_width="260dp"
            android:layout_height="0.1dp"
            android:layout_marginTop="7dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.589"
            app:layout_constraintStart_toEndOf="@id/ordersImageView"
            app:layout_constraintTop_toBottomOf="@id/ordersItemDateTextView" />

        <TextView
            android:id="@+id/ordersItemFoodNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:paddingVertical="8dp"
            app:layout_constraintStart_toStartOf="@id/ordersItemDateTextView"
            app:layout_constraintTop_toBottomOf="@id/ordersItemDateTextView"
            tools:text="Veggie tomato mix" />

        <View
            android:id="@+id/view2"
            android:layout_width="260dp"
            android:layout_height="0.1dp"
            android:layout_marginTop="7dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ordersImageView"
            app:layout_constraintTop_toBottomOf="@id/ordersItemFoodNameTextView" />


        <TextView
            android:id="@+id/text4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:paddingVertical="8dp"
            app:layout_constraintStart_toStartOf="@id/ordersItemFoodNameTextView"
            app:layout_constraintTop_toBottomOf="@id/view2"
            android:text="@string/total" />

        <TextView
            android:id="@+id/orderPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:paddingVertical="8dp"
            app:layout_constraintStart_toEndOf="@id/text4"
            app:layout_constraintTop_toBottomOf="@id/view2"
            tools:text="45,50 TL" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ordersImageView"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_marginStart="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/oops_404_foreground" />

        <Button
            android:id="@+id/ordersRepeatButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:drawableEnd="@drawable/icon_repeat"
            android:enabled="false"
            android:text="@string/reorder_button"
            android:textColor="@color/red"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ordersInfoButton"
            app:layout_constraintTop_toBottomOf="@id/orderPriceTextView" />

        <Button
            android:id="@+id/ordersInfoButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_icon_info"
            android:enabled="false"
            android:text="@string/detail"
            android:textColor="@color/red"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/text4"
            app:layout_constraintTop_toBottomOf="@id/text4" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>